feat: otimiza tabela de frequência
